[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Tools/Defibrillator/Defibrillator_Gauge-3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tools/Defibrillator/Defibrillator_Gauge-2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tools/Defibrillator/Defib gauge.png" type="Texture" id=3]
[ext_resource path="res://Tools/Defibrillator/PathFollow2D.gd" type="Script" id=4]
[ext_resource path="res://Tools/Defibrillator/DefibrillatorGame.gd" type="Script" id=5]
[ext_resource path="res://Assets/Tools/Defibrillator/Defibrillator_Gauge-5.png" type="Texture" id=6]
[ext_resource path="res://Assets/Tools/Defibrillator/Defibrillator_Gauge-6.png" type="Texture" id=7]
[ext_resource path="res://Assets/Tools/Defibrillator/Defibrillator_Gauge-4.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 129.891, 113.063 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 302.156, 213.901, 0, 0, 0, 0, 705.561, 213.73, 0, 0, 0, 0, 705.619, 213.818, 0, 0, 0, 0, 705.642, 213.821 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 65.2618, 62.3593 )

[node name="DefibrillatorGame" type="Node2D"]
script = ExtResource( 5 )

[node name="Gauge" type="Sprite" parent="."]
position = Vector2( 519.994, 181.409 )
scale = Vector2( 0.32753, 0.289204 )
texture = ExtResource( 3 )

[node name="Zone" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.74902 )
position = Vector2( 717.406, 182.708 )
scale = Vector2( 0.170371, 0.298747 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Zone"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone/Area2D"]
shape = SubResource( 1 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 302.156, 213.901 )
rotation = -7.8008e-06
rotate = false
cubic_interp = false
script = ExtResource( 4 )

[node name="Needle" type="Sprite" parent="Path2D/PathFollow2D"]
position = Vector2( 18.3221, -15.4658 )
rotation = 7.8008e-06
scale = Vector2( 0.282077, 0.349905 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Path2D/PathFollow2D/Needle"]
position = Vector2( -1.87793, -0.756958 )
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/Needle/Area2D"]
position = Vector2( 0.558472, -0.450134 )
shape = SubResource( 3 )

[node name="SpacePrompt" type="Sprite" parent="."]
visible = false
position = Vector2( 508.609, 382.069 )
scale = Vector2( 0.218575, 0.272367 )
texture = ExtResource( 8 )

[node name="QPrompt" type="Sprite" parent="."]
visible = false
position = Vector2( 510.553, 381.867 )
scale = Vector2( 0.211547, 0.252276 )
texture = ExtResource( 6 )

[node name="EPrompt" type="Sprite" parent="."]
visible = false
position = Vector2( 510.553, 381.867 )
scale = Vector2( 0.211547, 0.252276 )
texture = ExtResource( 7 )
[connection signal="area_entered" from="Path2D/PathFollow2D/Needle/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Path2D/PathFollow2D/Needle/Area2D" to="." method="_on_Area2D_area_exited"]
